--- a/erc20-staking-hardhat/package.json
+++ b/erc20-staking-hardhat/package.json
@@ -12,7 +12,8 @@
     "gas": "HARDHAT_GAS_REPORT=true hardhat test",
     "deploy:sepolia": "hardhat run --network sepolia deploy/00_deploy.ts",
     "deploy:bsctest": "hardhat run --network bsctest deploy/00_deploy.ts",
-    "typechain": "hardhat typechain"
+    "typechain": "hardhat typechain",
+    "ui:copy-abi": "node scripts/copy-abi.mjs"
   },
   "keywords": [],
   "author": "",
